# anveesa-cli

./: .anveesa.md  .gitignore  AGENT.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  npm-publish.md  package.json
.github/workflows/: ci.yml  release.yml
anveesa-npm/: README.md  index.js  package.json
npm/: README.md  install.js  package.json
scripts/: install.js
src/: cli.rs  config.rs  config_tests.rs  display.rs  image.rs  image_tests.rs  lib.rs  main.rs  mcp.rs  mcp_tests.rs  permissions.rs  prompt.rs  prompt_tests.rs  provider_mod_tests.rs  session.rs  session_tests.rs  tools.rs  tools_scenarios.rs  tui.rs  web.rs  web_ui.html  workspace.rs  workspace_tests.rs
src/provider/: command.rs  mod.rs  openai_compatible.rs  openai_compatible_tests.rs
src/tui/: commands.rs  format.rs  input.rs  render.rs  stream.rs
