[package]
name = "anveesa"
version = "0.3.5"
edition = "2024"
default-run = "anveesa"

[dependencies]
base64 = "0.22"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
rustyline = "14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "time", "sync", "io-util", "signal"] }
toml = "0.8"
